Popover overflow fix

--- a/src/assets/less/weed/popover.less
+++ b/src/assets/less/weed/popover.less
@@ -50,6 +50,7 @@
   font-family: @system-font-family;
   color: @system-text-color;
   font-size: 12px;
+  overflow: hidden;
 
   &.top {
     margin-top: -10px;
